--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -5,5 +5,8 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Initial Catalog=ApprenticeDatabase;Integrated Security=True;"
   }
 }
