--- a/ApprenticeWebAPI.csproj
+++ b/ApprenticeWebAPI.csproj
@@ -14,6 +14,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Apprentice Database\**" />
+    <Content Remove="Apprentice Database\**" />
+    <EmbeddedResource Remove="Apprentice Database\**" />
+    <None Remove="Apprentice Database\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.4" />
